# etymonoetic-interlingua

./: .gitignore  README.md  pyproject.toml
docs/: mvp.md  schema.md  usage.md
src/etymonoetic_interlingua/: __init__.py  __main__.py  cli.py  sources.py  templates.py  validator.py
src/etymonoetic_interlingua/schemas/: __init__.py
tests/: test_validator.py
