[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "etymonoetic-interlingua"
version = "0.1.0"
description = "AI-native semantic capsules for layered lexical meaning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Pattern Labs" }
]
dependencies = [
  "jsonschema>=4.22"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ei = "etymonoetic_interlingua.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/etymonoetic_interlingua"]

[tool.hatch.build.targets.wheel.force-include]
"src/etymonoetic_interlingua/schemas/semantic-capsule.schema.json" = "etymonoetic_interlingua/schemas/semantic-capsule.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
